force-app/main/default/objects/ServiceContents__c/ServiceContents__c.object-meta.xml
<CustomObject>
    <label>부가서비스 컨텐츠</label>
    <nameField>
        <label>Contents Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>