force-app/main/default/objects/ServiceContents__c/fields/fm_CheckUser__c.field-meta.xml
<CustomField>
    <fullName>fm_CheckUser__c</fullName>
    <formula>IF(ISBLANK( Instructor__c ),  Instructor2__c ,  Instructor__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CheckUser</label>
    <type>Text</type>
</CustomField>