force-app/main/default/objects/ServiceContents__c/fields/fm_SalesGroup__c.field-meta.xml
<CustomField>
    <fullName>fm_SalesGroup__c</fullName>
    <formula>Instructor__r.UserRole.Name</formula>
    <label>Sales Group</label>
    <type>Text</type>
</CustomField>