force-app/main/default/objects/ServiceContents__c/fields/Instructor2__c.field-meta.xml
<CustomField>
    <fullName>Instructor2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServiceContentsInstructor2</relationshipName>
    <type>Lookup</type>
</CustomField>