force-app/main/default/objects/ServiceContents__c/fields/Instructor3__c.field-meta.xml
<CustomField>
    <fullName>Instructor3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServiceContentsInstructor3</relationshipName>
    <type>Lookup</type>
</CustomField>