force-app/main/default/objects/ServiceContents__c/fields/IsUsage__c.field-meta.xml
<CustomField>
    <fullName>IsUsage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usage</label>
    <type>Checkbox</type>
</CustomField>