force-app/main/default/objects/ServiceContents__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>전국</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>수도권</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>동부권</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>서부권</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>