force-app/main/default/objects/ServiceContents__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Region__c</columns>
    <columns>fm_SalesGroup__c</columns>
    <columns>Instructor__c</columns>
    <columns>Instructor2__c</columns>
    <columns>Instructor3__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>